# base-traits

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
examples/: price-to_f64.rs
src/: lib.rs
src/traits/: as_f64.rs  as_i128.rs  as_i32.rs  as_i64.rs  as_isize.rs  as_str.rs  as_u128.rs  as_u32.rs  as_u64.rs  as_usize.rs  infinity.rs  integer.rs  is_default.rs  is_empty.rs  is_infinity.rs  is_nan.rs  is_zero.rs  len.rs  mod.rs  numeric.rs  real.rs  scalar.rs  sealed.rs  signed.rs  to_f64.rs  to_i128.rs  to_i16.rs  to_i32.rs  to_i64.rs  to_isize.rs  to_u128.rs  to_u16.rs  to_u32.rs  to_u64.rs  to_usize.rs  unsigned.rs  zero.rs
