# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
]
categories = [
	"data-structures",
	"rust-patterns",
]
description = "base traits (for Rust)"
edition = "2021"
homepage = "https://github.com/synesissoftware/base-traits"
keywords = [
	"traits",
]
license = "BSD-3-Clause"
name = "base-traits"
readme = "README.md"
version = "0.0.8"


# ##########################################################
# Targets

[lib]
name = "base_traits"
path = "src/lib.rs"

[[example]]
name = "price-to_f64"
path = "examples/price-to_f64.rs"


# ##########################################################
# Features

[features]

default = [
	# AsF64
	"implement-AsF64-for-built_ins",
	# AsISize
	"implement-AsISize-for-built_ins",
	# AsStr
	"implement-AsStr-for-built_ins",
	"implement-AsStr-for-standard_collection_types",
	# AsUSize
	"implement-AsUSize-for-built_ins",
	# Infinity
	"implement-Infinity-for-built_ins",
	# IsEmpty
	"implement-IsEmpty-for-built_ins",
	"implement-IsEmpty-for-standard_collection_types",
	"implement-IsEmpty-for-standard_ffi_types",
	"implement-IsEmpty-for-standard_path_types",
	"implement-IsEmpty-for-standard_range_types",
	# IsInfinity:
	"implement-IsInfinity-for-built_ins",
	# IsNAN:
	"implement-IsNAN-for-built_ins",
	# IsZero
	"implement-IsZero-for-built_ins",
	"implement-IsZero-for-standard_num_types",
	"implement-IsZero-for-standard_process_types",
	"implement-IsZero-for-standard_time_types",
	# Len
	"implement-Len-for-built_ins",
	"implement-Len-for-standard_collection_types",
	"implement-Len-for-standard_ffi_types",
	"implement-Len-for-standard_path_types",
	# ToF64
	"implement-ToF64-for-built_ins",
	# ToISize
	"implement-ToISize-for-built_ins",
	# ToUSize
	"implement-ToUSize-for-built_ins",
	# Zero
	"implement-Zero-for-built_ins",
]

experimental-exact_size_is_empty = []

# AsF64

implement-AsF64-for-built_ins = []

# AsISize

implement-AsISize-for-built_ins = []

# AsStr

implement-AsStr-for-built_ins = []
implement-AsStr-for-standard_collection_types = []

# AsUSize

implement-AsUSize-for-built_ins = []

# Infinity

implement-Infinity-for-built_ins = []

# IsEmpty:

implement-IsEmpty-for-built_ins = []
implement-IsEmpty-for-standard_collection_types = []
implement-IsEmpty-for-standard_ffi_types = []
implement-IsEmpty-for-standard_path_types = []
implement-IsEmpty-for-standard_process_types = [
	"experimental-exact_size_is_empty",
]
implement-IsEmpty-for-standard_range_types = []
implement-IsEmpty-for-standard_time_types = []

# IsInfinity:

implement-IsInfinity-for-built_ins = []

# IsNAN:

implement-IsNAN-for-built_ins = []

# IsZero

implement-IsZero-for-built_ins = []
implement-IsZero-for-standard_num_types = []
implement-IsZero-for-standard_process_types = []
implement-IsZero-for-standard_time_types = []

# Len:

implement-Len-for-built_ins = []
implement-Len-for-standard_collection_types = []
implement-Len-for-standard_ffi_types = []
implement-Len-for-standard_path_types = []
implement-Len-for-standard_process_types = []

# ToF64

implement-ToF64-for-built_ins = []

# ToISize

implement-ToISize-for-built_ins = []

# ToUSize

implement-ToUSize-for-built_ins = []

# Zero

implement-Zero-for-built_ins = []


# ##########################################################
# Dependencies

[dependencies]


[dev-dependencies]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

